fixing scrolling on mobile

--- a/multiplayer/public/cursors/style.css
+++ b/multiplayer/public/cursors/style.css
@@ -1,4 +1,5 @@
 body {
+    width: auto;
     background-color: aliceblue;
     overflow: hidden;
     cursor: none;
